--- a/styles/phone/tasks.scss
+++ b/styles/phone/tasks.scss
@@ -81,7 +81,7 @@ main
 		{
 			// Modification de l'apparence du formulaire.
 			gap: 0.75rem;
-			height: auto;
+			max-height: 100%;
 			flex-direction: column;
 
 			div
